--- a/Downloads/create-anything (1)/create-anything/_/vercel.json
+++ b/Downloads/create-anything (1)/create-anything/_/vercel.json
@@ -3,9 +3,7 @@
   "functions": {
     "api/server.js": {
       "runtime": "nodejs18.x",
-      "includeFiles": [
-        "apps/web/build/**"
-      ]
+      "includeFiles": "apps/web/build/**"
     }
   },
   "rewrites": [
